[project]
name = "picasso-tower"
version = "0.1.0"
description = "A logic puzzle solver using hints and floors"
authors = [{ name = "Eddie Dima" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["picasso_tower"]
