[project]
name = "picasso-tower"
version = "0.1.0"
description = "Picasso tower solution for Hexagate/Chainalisys interview"
authors = [{ name = "Eddie Dima" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["picasso_tower"]
